drafts other/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Unused terminals:

    break
    in
    input
    include
    compile
    to
    start
    and
    or
    SEMI
    NEWLINE
    ARGS

Grammar

Rule 0     S' -> program
Rule 1     program -> statement
Rule 2     program -> error
Rule 3     statement -> variable eq expr
Rule 4     statement -> variable eq relexpr
Rule 5     statement -> variable eq
Rule 6     statement -> variable error expr
Rule 7     statement -> variable error relexpr
Rule 8     expr -> expr PLUS expr
Rule 9     expr -> expr MINUS expr
Rule 10    expr -> expr TIMES expr
Rule 11    expr -> expr DIVIDE expr
Rule 12    expr -> expr POWER expr
Rule 13    expr -> INTEGER
Rule 14    expr -> FLOAT
Rule 15    expr -> STRING
Rule 16    expr -> variable
Rule 17    expr -> LPAREN expr RPAREN
Rule 18    expr -> MINUS expr
Rule 19    relexpr -> expr lt expr
Rule 20    relexpr -> expr le expr
Rule 21    relexpr -> expr gt expr
Rule 22    relexpr -> expr ge expr
Rule 23    relexpr -> expr eq expr
Rule 24    relexpr -> expr ne expr
Rule 25    relexpr -> LPAREN relexpr RPAREN
Rule 26    variable -> ID
Rule 27    statement -> print expr
Rule 28    statement -> if expr then
Rule 29    statement -> if relexpr then
Rule 30    statement -> else then
Rule 31    statement -> else if expr then
Rule 32    statement -> else if relexpr then
Rule 33    statement -> repeat until relexpr then
Rule 34    statement -> repeat until expr then
Rule 35    statement -> function variable LPAREN args RPAREN then
Rule 36    statement -> ID LPAREN call_args RPAREN
Rule 37    call_args -> expr COMMA call_args
Rule 38    call_args -> expr
Rule 39    args -> args COMMA variable
Rule 40    args -> variable
Rule 41    statement -> end

Terminals, with rules where they appear

ARGS                 : 
COMMA                : 37 39
DIVIDE               : 11
FLOAT                : 14
ID                   : 26 36
INTEGER              : 13
LPAREN               : 17 25 35 36
MINUS                : 9 18
NEWLINE              : 
PLUS                 : 8
POWER                : 12
RPAREN               : 17 25 35 36
SEMI                 : 
STRING               : 15
TIMES                : 10
and                  : 
break                : 
compile              : 
else                 : 30 31 32
end                  : 41
eq                   : 3 4 5 23
error                : 2 6 7
function             : 35
ge                   : 22
gt                   : 21
if                   : 28 29 31 32
in                   : 
include              : 
input                : 
le                   : 20
lt                   : 19
ne                   : 24
or                   : 
print                : 27
repeat               : 33 34
start                : 
then                 : 28 29 30 31 32 33 34 35
to                   : 
until                : 33 34

Nonterminals, with rules where they appear

args                 : 35 39
call_args            : 36 37
expr                 : 3 6 8 8 9 9 10 10 11 11 12 12 17 18 19 19 20 20 21 21 22 22 23 23 24 24 27 28 31 34 37 38
program              : 0
relexpr              : 4 7 25 29 32 33
statement            : 1
variable             : 3 4 5 6 7 16 35 39 40

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement
    (2) program -> . error
    (3) statement -> . variable eq expr
    (4) statement -> . variable eq relexpr
    (5) statement -> . variable eq
    (6) statement -> . variable error expr
    (7) statement -> . variable error relexpr
    (27) statement -> . print expr
    (28) statement -> . if expr then
    (29) statement -> . if relexpr then
    (30) statement -> . else then
    (31) statement -> . else if expr then
    (32) statement -> . else if relexpr then
    (33) statement -> . repeat until relexpr then
    (34) statement -> . repeat until expr then
    (35) statement -> . function variable LPAREN args RPAREN then
    (36) statement -> . ID LPAREN call_args RPAREN
    (41) statement -> . end
    (26) variable -> . ID

    error           shift and go to state 3
    print           shift and go to state 5
    if              shift and go to state 6
    else            shift and go to state 7
    repeat          shift and go to state 8
    function        shift and go to state 9
    ID              shift and go to state 10
    end             shift and go to state 11

    program                        shift and go to state 1
    statement                      shift and go to state 2
    variable                       shift and go to state 4

state 1

    (0) S' -> program .



state 2

    (1) program -> statement .

    $end            reduce using rule 1 (program -> statement .)


state 3

    (2) program -> error .

    $end            reduce using rule 2 (program -> error .)


state 4

    (3) statement -> variable . eq expr
    (4) statement -> variable . eq relexpr
    (5) statement -> variable . eq
    (6) statement -> variable . error expr
    (7) statement -> variable . error relexpr

    eq              shift and go to state 12
    error           shift and go to state 13


state 5

    (27) statement -> print . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 14
    variable                       shift and go to state 19

state 6

    (28) statement -> if . expr then
    (29) statement -> if . relexpr then
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (19) relexpr -> . expr lt expr
    (20) relexpr -> . expr le expr
    (21) relexpr -> . expr gt expr
    (22) relexpr -> . expr ge expr
    (23) relexpr -> . expr eq expr
    (24) relexpr -> . expr ne expr
    (25) relexpr -> . LPAREN relexpr RPAREN
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 22
    relexpr                        shift and go to state 23
    variable                       shift and go to state 19

state 7

    (30) statement -> else . then
    (31) statement -> else . if expr then
    (32) statement -> else . if relexpr then

    then            shift and go to state 25
    if              shift and go to state 26


state 8

    (33) statement -> repeat . until relexpr then
    (34) statement -> repeat . until expr then

    until           shift and go to state 27


state 9

    (35) statement -> function . variable LPAREN args RPAREN then
    (26) variable -> . ID

    ID              shift and go to state 21

    variable                       shift and go to state 28

state 10

    (36) statement -> ID . LPAREN call_args RPAREN
    (26) variable -> ID .

    LPAREN          shift and go to state 29
    eq              reduce using rule 26 (variable -> ID .)
    error           reduce using rule 26 (variable -> ID .)


state 11

    (41) statement -> end .

    $end            reduce using rule 41 (statement -> end .)


state 12

    (3) statement -> variable eq . expr
    (4) statement -> variable eq . relexpr
    (5) statement -> variable eq .
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (19) relexpr -> . expr lt expr
    (20) relexpr -> . expr le expr
    (21) relexpr -> . expr gt expr
    (22) relexpr -> . expr ge expr
    (23) relexpr -> . expr eq expr
    (24) relexpr -> . expr ne expr
    (25) relexpr -> . LPAREN relexpr RPAREN
    (26) variable -> . ID

    $end            reduce using rule 5 (statement -> variable eq .)
    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    variable                       shift and go to state 19
    expr                           shift and go to state 30
    relexpr                        shift and go to state 31

state 13

    (6) statement -> variable error . expr
    (7) statement -> variable error . relexpr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (19) relexpr -> . expr lt expr
    (20) relexpr -> . expr le expr
    (21) relexpr -> . expr gt expr
    (22) relexpr -> . expr ge expr
    (23) relexpr -> . expr eq expr
    (24) relexpr -> . expr ne expr
    (25) relexpr -> . LPAREN relexpr RPAREN
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    variable                       shift and go to state 19
    expr                           shift and go to state 32
    relexpr                        shift and go to state 33

state 14

    (27) statement -> print expr .
    (8) expr -> expr . PLUS expr
    (9) expr -> expr . MINUS expr
    (10) expr -> expr . TIMES expr
    (11) expr -> expr . DIVIDE expr
    (12) expr -> expr . POWER expr

    $end            reduce using rule 27 (statement -> print expr .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    POWER           shift and go to state 38


state 15

    (18) expr -> MINUS . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 39
    variable                       shift and go to state 19

state 16

    (13) expr -> INTEGER .

    PLUS            reduce using rule 13 (expr -> INTEGER .)
    MINUS           reduce using rule 13 (expr -> INTEGER .)
    TIMES           reduce using rule 13 (expr -> INTEGER .)
    DIVIDE          reduce using rule 13 (expr -> INTEGER .)
    POWER           reduce using rule 13 (expr -> INTEGER .)
    $end            reduce using rule 13 (expr -> INTEGER .)
    then            reduce using rule 13 (expr -> INTEGER .)
    lt              reduce using rule 13 (expr -> INTEGER .)
    le              reduce using rule 13 (expr -> INTEGER .)
    gt              reduce using rule 13 (expr -> INTEGER .)
    ge              reduce using rule 13 (expr -> INTEGER .)
    eq              reduce using rule 13 (expr -> INTEGER .)
    ne              reduce using rule 13 (expr -> INTEGER .)
    RPAREN          reduce using rule 13 (expr -> INTEGER .)
    COMMA           reduce using rule 13 (expr -> INTEGER .)


state 17

    (14) expr -> FLOAT .

    PLUS            reduce using rule 14 (expr -> FLOAT .)
    MINUS           reduce using rule 14 (expr -> FLOAT .)
    TIMES           reduce using rule 14 (expr -> FLOAT .)
    DIVIDE          reduce using rule 14 (expr -> FLOAT .)
    POWER           reduce using rule 14 (expr -> FLOAT .)
    $end            reduce using rule 14 (expr -> FLOAT .)
    then            reduce using rule 14 (expr -> FLOAT .)
    lt              reduce using rule 14 (expr -> FLOAT .)
    le              reduce using rule 14 (expr -> FLOAT .)
    gt              reduce using rule 14 (expr -> FLOAT .)
    ge              reduce using rule 14 (expr -> FLOAT .)
    eq              reduce using rule 14 (expr -> FLOAT .)
    ne              reduce using rule 14 (expr -> FLOAT .)
    RPAREN          reduce using rule 14 (expr -> FLOAT .)
    COMMA           reduce using rule 14 (expr -> FLOAT .)


state 18

    (15) expr -> STRING .

    PLUS            reduce using rule 15 (expr -> STRING .)
    MINUS           reduce using rule 15 (expr -> STRING .)
    TIMES           reduce using rule 15 (expr -> STRING .)
    DIVIDE          reduce using rule 15 (expr -> STRING .)
    POWER           reduce using rule 15 (expr -> STRING .)
    $end            reduce using rule 15 (expr -> STRING .)
    then            reduce using rule 15 (expr -> STRING .)
    lt              reduce using rule 15 (expr -> STRING .)
    le              reduce using rule 15 (expr -> STRING .)
    gt              reduce using rule 15 (expr -> STRING .)
    ge              reduce using rule 15 (expr -> STRING .)
    eq              reduce using rule 15 (expr -> STRING .)
    ne              reduce using rule 15 (expr -> STRING .)
    RPAREN          reduce using rule 15 (expr -> STRING .)
    COMMA           reduce using rule 15 (expr -> STRING .)


state 19

    (16) expr -> variable .

    PLUS            reduce using rule 16 (expr -> variable .)
    MINUS           reduce using rule 16 (expr -> variable .)
    TIMES           reduce using rule 16 (expr -> variable .)
    DIVIDE          reduce using rule 16 (expr -> variable .)
    POWER           reduce using rule 16 (expr -> variable .)
    $end            reduce using rule 16 (expr -> variable .)
    then            reduce using rule 16 (expr -> variable .)
    lt              reduce using rule 16 (expr -> variable .)
    le              reduce using rule 16 (expr -> variable .)
    gt              reduce using rule 16 (expr -> variable .)
    ge              reduce using rule 16 (expr -> variable .)
    eq              reduce using rule 16 (expr -> variable .)
    ne              reduce using rule 16 (expr -> variable .)
    RPAREN          reduce using rule 16 (expr -> variable .)
    COMMA           reduce using rule 16 (expr -> variable .)


state 20

    (17) expr -> LPAREN . expr RPAREN
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 40
    variable                       shift and go to state 19

state 21

    (26) variable -> ID .

    PLUS            reduce using rule 26 (variable -> ID .)
    MINUS           reduce using rule 26 (variable -> ID .)
    TIMES           reduce using rule 26 (variable -> ID .)
    DIVIDE          reduce using rule 26 (variable -> ID .)
    POWER           reduce using rule 26 (variable -> ID .)
    $end            reduce using rule 26 (variable -> ID .)
    then            reduce using rule 26 (variable -> ID .)
    lt              reduce using rule 26 (variable -> ID .)
    le              reduce using rule 26 (variable -> ID .)
    gt              reduce using rule 26 (variable -> ID .)
    ge              reduce using rule 26 (variable -> ID .)
    eq              reduce using rule 26 (variable -> ID .)
    ne              reduce using rule 26 (variable -> ID .)
    LPAREN          reduce using rule 26 (variable -> ID .)
    RPAREN          reduce using rule 26 (variable -> ID .)
    COMMA           reduce using rule 26 (variable -> ID .)


state 22

    (28) statement -> if expr . then
    (8) expr -> expr . PLUS expr
    (9) expr -> expr . MINUS expr
    (10) expr -> expr . TIMES expr
    (11) expr -> expr . DIVIDE expr
    (12) expr -> expr . POWER expr
    (19) relexpr -> expr . lt expr
    (20) relexpr -> expr . le expr
    (21) relexpr -> expr . gt expr
    (22) relexpr -> expr . ge expr
    (23) relexpr -> expr . eq expr
    (24) relexpr -> expr . ne expr

    then            shift and go to state 41
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    POWER           shift and go to state 38
    lt              shift and go to state 42
    le              shift and go to state 43
    gt              shift and go to state 44
    ge              shift and go to state 45
    eq              shift and go to state 46
    ne              shift and go to state 47


state 23

    (29) statement -> if relexpr . then

    then            shift and go to state 48


state 24

    (17) expr -> LPAREN . expr RPAREN
    (25) relexpr -> LPAREN . relexpr RPAREN
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (19) relexpr -> . expr lt expr
    (20) relexpr -> . expr le expr
    (21) relexpr -> . expr gt expr
    (22) relexpr -> . expr ge expr
    (23) relexpr -> . expr eq expr
    (24) relexpr -> . expr ne expr
    (25) relexpr -> . LPAREN relexpr RPAREN
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 49
    relexpr                        shift and go to state 50
    variable                       shift and go to state 19

state 25

    (30) statement -> else then .

    $end            reduce using rule 30 (statement -> else then .)


state 26

    (31) statement -> else if . expr then
    (32) statement -> else if . relexpr then
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (19) relexpr -> . expr lt expr
    (20) relexpr -> . expr le expr
    (21) relexpr -> . expr gt expr
    (22) relexpr -> . expr ge expr
    (23) relexpr -> . expr eq expr
    (24) relexpr -> . expr ne expr
    (25) relexpr -> . LPAREN relexpr RPAREN
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 24
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 51
    relexpr                        shift and go to state 52
    variable                       shift and go to state 19

state 27

    (33) statement -> repeat until . relexpr then
    (34) statement -> repeat until . expr then
    (19) relexpr -> . expr lt expr
    (20) relexpr -> . expr le expr
    (21) relexpr -> . expr gt expr
    (22) relexpr -> . expr ge expr
    (23) relexpr -> . expr eq expr
    (24) relexpr -> . expr ne expr
    (25) relexpr -> . LPAREN relexpr RPAREN
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    LPAREN          shift and go to state 55
    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    relexpr                        shift and go to state 53
    expr                           shift and go to state 54
    variable                       shift and go to state 19

state 28

    (35) statement -> function variable . LPAREN args RPAREN then

    LPAREN          shift and go to state 56


state 29

    (36) statement -> ID LPAREN . call_args RPAREN
    (37) call_args -> . expr COMMA call_args
    (38) call_args -> . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    call_args                      shift and go to state 57
    expr                           shift and go to state 58
    variable                       shift and go to state 19

state 30

    (3) statement -> variable eq expr .
    (8) expr -> expr . PLUS expr
    (9) expr -> expr . MINUS expr
    (10) expr -> expr . TIMES expr
    (11) expr -> expr . DIVIDE expr
    (12) expr -> expr . POWER expr
    (19) relexpr -> expr . lt expr
    (20) relexpr -> expr . le expr
    (21) relexpr -> expr . gt expr
    (22) relexpr -> expr . ge expr
    (23) relexpr -> expr . eq expr
    (24) relexpr -> expr . ne expr

    $end            reduce using rule 3 (statement -> variable eq expr .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    POWER           shift and go to state 38
    lt              shift and go to state 42
    le              shift and go to state 43
    gt              shift and go to state 44
    ge              shift and go to state 45
    eq              shift and go to state 46
    ne              shift and go to state 47


state 31

    (4) statement -> variable eq relexpr .

    $end            reduce using rule 4 (statement -> variable eq relexpr .)


state 32

    (6) statement -> variable error expr .
    (8) expr -> expr . PLUS expr
    (9) expr -> expr . MINUS expr
    (10) expr -> expr . TIMES expr
    (11) expr -> expr . DIVIDE expr
    (12) expr -> expr . POWER expr
    (19) relexpr -> expr . lt expr
    (20) relexpr -> expr . le expr
    (21) relexpr -> expr . gt expr
    (22) relexpr -> expr . ge expr
    (23) relexpr -> expr . eq expr
    (24) relexpr -> expr . ne expr

    $end            reduce using rule 6 (statement -> variable error expr .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    POWER           shift and go to state 38
    lt              shift and go to state 42
    le              shift and go to state 43
    gt              shift and go to state 44
    ge              shift and go to state 45
    eq              shift and go to state 46
    ne              shift and go to state 47


state 33

    (7) statement -> variable error relexpr .

    $end            reduce using rule 7 (statement -> variable error relexpr .)


state 34

    (8) expr -> expr PLUS . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 59
    variable                       shift and go to state 19

state 35

    (9) expr -> expr MINUS . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 60
    variable                       shift and go to state 19

state 36

    (10) expr -> expr TIMES . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 61
    variable                       shift and go to state 19

state 37

    (11) expr -> expr DIVIDE . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 62
    variable                       shift and go to state 19

state 38

    (12) expr -> expr POWER . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 63
    variable                       shift and go to state 19

state 39

    (18) expr -> MINUS expr .
    (8) expr -> expr . PLUS expr
    (9) expr -> expr . MINUS expr
    (10) expr -> expr . TIMES expr
    (11) expr -> expr . DIVIDE expr
    (12) expr -> expr . POWER expr

    PLUS            reduce using rule 18 (expr -> MINUS expr .)
    MINUS           reduce using rule 18 (expr -> MINUS expr .)
    TIMES           reduce using rule 18 (expr -> MINUS expr .)
    DIVIDE          reduce using rule 18 (expr -> MINUS expr .)
    POWER           reduce using rule 18 (expr -> MINUS expr .)
    $end            reduce using rule 18 (expr -> MINUS expr .)
    then            reduce using rule 18 (expr -> MINUS expr .)
    lt              reduce using rule 18 (expr -> MINUS expr .)
    le              reduce using rule 18 (expr -> MINUS expr .)
    gt              reduce using rule 18 (expr -> MINUS expr .)
    ge              reduce using rule 18 (expr -> MINUS expr .)
    eq              reduce using rule 18 (expr -> MINUS expr .)
    ne              reduce using rule 18 (expr -> MINUS expr .)
    RPAREN          reduce using rule 18 (expr -> MINUS expr .)
    COMMA           reduce using rule 18 (expr -> MINUS expr .)

  ! PLUS            [ shift and go to state 34 ]
  ! MINUS           [ shift and go to state 35 ]
  ! TIMES           [ shift and go to state 36 ]
  ! DIVIDE          [ shift and go to state 37 ]
  ! POWER           [ shift and go to state 38 ]


state 40

    (17) expr -> LPAREN expr . RPAREN
    (8) expr -> expr . PLUS expr
    (9) expr -> expr . MINUS expr
    (10) expr -> expr . TIMES expr
    (11) expr -> expr . DIVIDE expr
    (12) expr -> expr . POWER expr

    RPAREN          shift and go to state 64
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    TIMES           shift and go to state 36
    DIVIDE          shift and go to state 37
    POWER           shift and go to state 38


state 41

    (28) statement -> if expr then .

    $end            reduce using rule 28 (statement -> if expr then .)


state 42

    (19) relexpr -> expr lt . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 65
    variable                       shift and go to state 19

state 43

    (20) relexpr -> expr le . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 66
    variable                       shift and go to state 19

state 44

    (21) relexpr -> expr gt . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 67
    variable                       shift and go to state 19

state 45

    (22) relexpr -> expr ge . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
    ID              shift and go to state 21

    expr                           shift and go to state 68
    variable                       shift and go to state 19

state 46

    (23) relexpr -> expr eq . expr
    (8) expr -> . expr PLUS expr
    (9) expr -> . expr MINUS expr
    (10) expr -> . expr TIMES expr
    (11) expr -> . expr DIVIDE expr
    (12) expr -> . expr POWER expr
    (13) expr -> . INTEGER
    (14) expr -> . FLOAT
    (15) expr -> . STRING
    (16) expr -> . variable
    (17) expr -> . LPAREN expr RPAREN
    (18) expr -> . MINUS expr
    (26) variable -> . ID

    INTEGER         shift and go to state 16
    FLOAT           shift and go to state 17
    STRING          shift and go to state 18
    LPAREN          shift and go to state 20
    MINUS           shift and go to state 15
